[package]
name = "client"
version = "0.2.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang = "0.30.1"
anyhow = "1.0.93"
bls12_381 = "0.8.0"
group = "0.13.0"
rand_core = "0.6"
solana-logger = "2.2.1"
solana-rpc-client-api = "2.2.0"
tokio = { version = "1.0", features = ["full"] }
