[package]
name = "escrow-project"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrow_project"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-program = "1.16.0"
hex = "0.4"
sha2 = "0.9.7"  # Ensure this is compatible with `bls12_381`
bls12_381 = { version = "0.8.0", features = ["experimental"] }
num-bigint = "0.4.6"
